# depth-camera-automatic-calibration

./: .gitignore  CMakeLists.txt  Makefile  Makefileold  README.md
calibration_files/: out_camera_data_1.xml  out_camera_data_2.xml  out_camera_data_3.xml  out_camera_data_4.xml  out_camera_data_5.xml
calibration_files/first_try/: out_camera_data_1.xml  out_camera_data_2.xml  out_camera_data_3.xml  out_camera_data_4.xml
src/: Visualization.cpp  automaticcalibration.cpp  computecalibration.cpp  gridcalibration.cpp  tracking.cpp  undistort.cpp
tracking_result/: tracking_data_green_1.txt  tracking_data_green_2.txt  tracking_data_green_3.txt  tracking_data_green_4.txt  tracking_data_green_5.txt  tracking_data_red_1.txt  tracking_data_red_2.txt  tracking_data_red_3.txt  tracking_data_red_4.txt  tracking_data_red_5.txt
tracking_result/first_try/: tracking_data_green_1.txt  tracking_data_green_2.txt  tracking_data_green_3.txt  tracking_data_green_4.txt  tracking_data_red_1.txt  tracking_data_red_2.txt  tracking_data_red_3.txt  tracking_data_red_4.txt
xml_config/: cam1.xml  cam2.xml  cam3.xml  cam4.xml  cam5.xml
